@@ -1,3 +1,10 @@
+2007-08-10  Moritz  <moritz@euler>
+
+	* Makefile.am (AM_CFLAGS): Include $(top_builddir)/src.
+	* getpin-callback.c (agent_askpin): Use POLDI_PIN2_QUERY_MSG
+	instead of hardcoded string.
+	(agent_popup_message_stop): Removed unused var.
+
 2007-06-29  Moritz  <moritz@g10code.com>
 
 	* README, scd-support.h, getpin-callback.c, wait-for-card.c: New
